# dev-pipeline

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  STATUS.md  alembic.ini  alembic_devgodzilla.ini  debug_config.py  docker-compose.dev.yml  docker-compose.devgodzilla.yml  docker-compose.yml  nginx.conf  nginx.devgodzilla.conf  nginx.local.conf  podcast_episode_5_vat.txt  pytest.ini  repro_clarify.py  requirements-orchestrator.txt  requirements.txt  tui  validation-summary-report.md
alembic/: env.py
config/: agents.yaml
deksdenflow/: ci.py  codex.py  config.py  domain.py  jobs.py  metrics.py  pipeline.py  project_setup.py  qa.py  spec.py  spec_tools.py  storage.py  worker_runtime.py
devgodzilla/: README.md  __init__.py  config.py  errors.py  logging.py  prompt_utils.py  spec.py
docs/: APP_ARCHITECTURE.md  COMPREHENSIVE_ARCHITECTURE.md  SPEC_KIT_EXECUTION_PLAN.md  SPEC_KIT_INTEGRATION_PLAN.md  TESTING_COMPLETE.md  WORKFLOW_PIPELINE_REVIEW.md  agent-workflow-unification.md  api-reference.md  architecture.md  ci.md  cli-workflow-harness-ci-integration.md  cli-workflow-harness-usage.md  cli.md  deksdenflow.md  demo_harness_report.md  dev-pipeline-frontend_phase1_discovery.md  dev-pipeline-frontend_phase2_api_mapping.md  devgodzilla_frontend_windmill_integration_plan.md  e2e-testing-guide.md  frontend-solution-architecture.md  implementation-plan.md  manual-workflow-testing.md  orchestrator.md  (+13 more)
tui-rs/: Cargo.toml
tui-rs/src/: api.rs  app.rs  main.rs  models.rs  state.rs  ui.rs
tui-rs/src/ui/: event_detail.rs
(+521 files in other folders)
